--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:type" content="website">
   <meta name="robots" content="index, follow">
 
+  <link rel="canonical" href="https://lavjourney.kz/"/>
   <link rel="icon" href="https://lavjourney.kz/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
