--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     
   </header>
 
+  <h1> Психолог Анна Лёвина, онлайн и в Алматы </h1>
   <section class="hero">
     <div class="container">
       <div class="hero-text-block">
