--- a/articles.html
+++ b/articles.html
@@ -25,9 +25,9 @@
   <script src="main_script.js" defer></script>
   
   <!-- Preload critical images -->
-  <link rel="preload" as="image" href="sunset-silhouette-reflection.png">
-  <link rel="preload" as="image" href="calm-water-surface.avif">
-  <link rel="preload" as="image" href="forest-path.avif">
+  <link rel="preload" as="image" href="sunset-silhouette-reflection.webp">
+  <link rel="preload" as="image" href="calm-water-surface.webp">
+  <link rel="preload" as="image" href="forest-path.webp">
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -960,7 +960,7 @@
     <div class="articles-grid">
       <!-- Existing Article: Existential Crisis -->
       <a href="existential-crisis.html" class="article-card" style="--card-index: 0;">
-        <img src="sunset-silhouette-reflection.png" 
+        <img src="sunset-silhouette-reflection.webp" 
              alt="Экзистенциальный кризис: пустота или точка роста?" 
              class="article-thumbnail" loading="lazy">
         <div class="article-content">
