--- a/existential-crisis.html
+++ b/existential-crisis.html
@@ -753,7 +753,7 @@
   <!-- Hero Image Section -->
   <section class="article-hero">
     <div class="hero-image-container">
-      <img src="sunset-silhouette-reflection.png" 
+      <img src="sunset-silhouette-reflection.webp" 
            alt="Экзистенциальный кризис: человек в размышлениях о смысле жизни на фоне заката. Психологическая помощь при кризисе среднего возраста от психолога Анны Лёвиной в Алматы" 
            class="hero-image" loading="lazy" width="800" height="400">
       <div class="hero-overlay">
@@ -774,7 +774,7 @@
 
       <!-- Section divider -->
       <div class="section-divider">
-        <img src="calm-water-surface.avif" 
+        <img src="calm-water-surface.webp" 
              alt="Спокойствие и глубина: преодоление экзистенциального кризиса через самопознание. Психотерапия в Алматы" class="divider-image" loading="lazy" width="800" height="200">
       </div>
 
@@ -786,7 +786,7 @@
 
       <!-- Section divider -->
       <div class="section-divider">
-        <img src="forest-path.avif" 
+        <img src="forest-path.webp" 
              alt="Выбор жизненного пути: как найти направление после кризиса среднего возраста. Экзистенциальная терапия с психологом Анной Лёвиной" class="divider-image" loading="lazy" width="800" height="200">
       </div>
 
@@ -796,7 +796,7 @@
 
       <!-- Section divider -->
       <div class="section-divider">
-        <img src="mountain-road-at-dawn.png" 
+        <img src="mountain-road-at-dawn.webp" 
              alt="Новые возможности после экзистенциального кризиса: путь к личностному росту. Психологическая поддержка в Алматы" class="divider-image" loading="lazy" width="800" height="200">
       </div>
 
