--- a/articles.html
+++ b/articles.html
@@ -967,7 +967,7 @@
           <span class="article-category">Экзистенциальная терапия</span>
           <h2 class="article-title">Пустота или точка роста? Что скрывает экзистенциальный кризис</h2>
           <p class="article-excerpt">
-            Иногда жизнь будто меркнет: внутри становится пусто, цели не манят, привычные объяснения не работают. Экзистенциальный кризис воспринимается болезненно, но зачастую он про взросление и переход, а не про поломку.
+            Иногда жизнь будто меркнет: внутри становится пусто, цели не манят, привычные объяснения не работают, будущее туманно. Так начинается экзистенциальный кризис, который случается в рубежные периоды жизни: подростковый возраст, около тридцати лет, середина жизни, выход на пенсию. Кризис запускают и возраст, и жизненные события: утрата близкого или значимых отношений, профессиональные неудачи, изменения в мировоззрении, духовный перелом. Кризис воспринимается болезненно, но зачастую он про взросление и переход, а не про поломку. Это не лень и не каприз. Это момент, когда психика честно сообщает: прежняя система координат свое отжила.
           </p>
           <div class="article-meta">
             <span class="article-date">
