--- a/pimpl.html
+++ b/pimpl.html
@@ -476,7 +476,7 @@
   </div>
 
   <!-- Edit Content Screen -->
-  <div id="editcontent-panel" class="centered-panel" style="margin: 0 0 0 0; padding: 0 0 0 0; display:none;align-items: center; max-width: 100%;">
+  <div id="editcontent-panel" class="centered-panel" style="margin: 0 0 0 0; padding: 0 0 0 0; display:none;align-items: center; max-width: 100%; text-align: left;">
     <div class="error-message" id="editcontent-error"></div>
     <form id="editcontent-form" autocomplete="off">
       <div style="display: flex; justify-content: center; gap: 1em; margin-top: 1.5em;">
