--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
   <h1> Психолог Анна Лёвина, онлайн и в Алматы </h1>
   <section class="hero">
     <div class="container">
-    <div class="hero-slogan" edicontent_id="dobro-pozhalovat-v-puteshestvie-k-se"> Сайт для тех, кто дошёл до середины жизни и оказался в тупике</div>
+    <div class="hero-slogan" edicontent_id="dobro-pozhalovat-v-puteshestvie-k-se" id="about"> Сайт для тех, кто дошёл до середины жизни и оказался в тупике</div>
       </div>
 
     <div class="container">
@@ -392,7 +392,7 @@
       </div>
       
       <div class="hero-image-wrapper" >
-        <img src="anya-main.jpg" id="about" alt="#психолог алматы #психолог онлайн #женщина психолог #клинический психолог #кризис среднего возраста #лила #расстановки #психологическая помощь #кто я #зачем я живу #в чем смысл жизни #тревога #усталость #тупик #конфликт #проблемы #отношения #что-то не так #выгорание #не люблю себя #не выбираю себя">
+        <img src="anya-main.jpg" alt="#психолог алматы #психолог онлайн #женщина психолог #клинический психолог #кризис среднего возраста #лила #расстановки #психологическая помощь #кто я #зачем я живу #в чем смысл жизни #тревога #усталость #тупик #конфликт #проблемы #отношения #что-то не так #выгорание #не люблю себя #не выбираю себя">
       </div>
     </div>
     
