--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
   <section class="section" id="what_i_work_with">
     <div class="container">
-      <div style="text-align: center; font-size: 2rem; color: var(--accent-color);">
+      <div style="text-align: center; font-size: 2rem; color: академическая база(--accent-color);">
         <i class="psi-icon">Ψ</i>
       </div>
       <h2 class="section-title" edicontent_id="s-chem-ya-rabotayu">С чем я работаю</h2>
@@ -465,8 +465,15 @@
 
             <p style="line-height: 1.7; margin-bottom: 1rem;">Моя позиция – психолог работает словом и душой, и только в подлинном контакте человека с человеком случается психотерапевтическая алхимия.</p>
 
-            <p style="line-height: 1.7;margin-bottom: 1rem;">Мой принцип – следуй за клиентом и подсвечивай зону его ближайшего развития.</p><p>Моя опора:</p><p style="color: rgb(31, 41, 55);"><span style="color: rgb(68, 68, 68);">- академическая база (проф. переподготовка по общей психологии, магистратура по клинической психологии)</span></p><p style="color: rgb(31, 41, 55);"><span style="color: rgb(68, 68, 68);">- знания и опыт, полученные в процессе личной и обучающей терапии</span></p><p style="color: rgb(31, 41, 55);"><span style="color: rgb(68, 68, 68);">- первоисточники – отечественные психологические школы, психодинамический подход, философы-экзистенциалисты, трансперсональный подход, нейролингвистическое программирование</span></p>
-
+            <p style="line-height: 1.7;margin-bottom: 1rem;">Мой принцип – следуй за клиентом и подсвечивай зону его ближайшего развития.</p>
+            
+            <p>Моя опора:</p>
+            <ul class="word-style-list">
+              <li><span>академическая база (проф. переподготовка по общей психологии, магистратура по клинической психологии)</span></li>
+              <li><span>знания и опыт, полученные в процессе личной и обучающей терапии</span></li>
+              <li><span>первоисточники – отечественные психологические школы, психодинамический подход, философы-экзистенциалисты, трансперсональный подход, нейролингвистическое программирование</span></li>
+            </ul>
+            
             <p style="line-height: 1.7;margin-bottom: 1rem; margin-top: 1rem;">Я не опираюсь на один метод, и не придерживаюсь жёсткой структуры. Способ моей работы скорее интуитивный, чем рациональный. Я – больше про глубинную работу.</p>
 
             <p style="line-height: 1.7; opacity: 0.9;margin-bottom: 1rem;">Если вы предпочитаете чёткий протокол и заранее простроенные шаги – я работаю иначе.</p>
