--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
           <div class="testimonial-inner">
             <div class="testimonial-text" edicontent_id="otzyv-svetlana-text">
               <p>Дорогая Анна, хочу Вас поблагодарить за помощь которую Вы мне оказали... 
-Я очень рада что встретила именно Вас в своей жизненной ситуации. Спасибо что Вы есть☀️</p>
+Я очень рада что встретила именно Вас в своей жизненной ситуации. Спасибо что Вы есть
+☀️</p>
             </div>
           </div>
           <div class="testimonial-signature">
