--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
   <section class="section" id="what_i_work_with">
     <div class="container">
       <div style="text-align: center; font-size: 2rem; color: академическая база(--accent-color);">
-        <i class="psi-icon">Ψ</i>
+        <i class="psi-icon" style="color: var(--accent-color);">Ψ</i>
       </div>
       <h2 class="section-title" edicontent_id="s-chem-ya-rabotayu">С чем я работаю</h2>
       
