--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Психолог Анна Лёвина — онлайн терапия и консультации в Алматы</title>
+  <title>Психолог Анна Лёвина — онлайн и оффлайн в Алматы</title>
   <meta name="description" content="Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия">
   <meta name="keywords" content="психолог Алматы, клинический психолог, онлайн терапия, психологические консультации, расстановки, игра лила, экзистенциальная терапия, НЛП, тревога, депрессия, кризис среднего возраста, выгорание, психотерапия онлайн, психолог женщина, телесные шахматы, символдрама, психодинамический подход, личностный рост, самопознание">
   <meta property="og:title" content="Анна Лёвина">
@@ -199,7 +199,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Психолог Анна Лёвина — онлайн терапия и консультации в Алматы",
+    "name": "Психолог Анна Лёвина — онлайн и оффлайн в Алматы.",
     "description": "Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия",
     "url": "https://lavjourney.kz",
     "inLanguage": "ru",
