--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Психолог Анна Лёвина — онлайн и оффлайн в Алматы</title>
-  <meta name="description" content="Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия">
-  <meta name="keywords" content="психолог Алматы, клинический психолог, онлайн терапия, психологические консультации, расстановки, игра лила, экзистенциальная терапия, НЛП, тревога, депрессия, кризис среднего возраста, выгорание, психотерапия онлайн, психолог женщина, телесные шахматы, символдрама, психодинамический подход, личностный рост, самопознание">
+  <meta name="description" content="Психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия">
+  <meta name="keywords" content="психолог Алматы, онлайн терапия, психологические консультации, расстановки, игра лила, экзистенциальная терапия, НЛП, тревога, депрессия, кризис среднего возраста, выгорание, психотерапия онлайн, психолог женщина, телесные шахматы, символдрама, психодинамический подход, личностный рост, самопознание">
   <meta property="og:title" content="Анна Лёвина">
   <meta property="og:description" content="Анна Лёвина — квалифицированная психологическая поддержка">
   <meta property="og:image" content="https://lavjourney.kz/anya-main.jpg">
-  <meta property="og:image:alt" content="Психолог Анна Лёвина — клинический психолог в Алматы">
+  <meta property="og:image:alt" content="Психолог Анна Лёвина в Алматы">
   <meta property="og:url" content="https://lavjourney.kz">
   <meta property="og:type" content="website">
   <meta name="robots" content="index, follow">
@@ -63,7 +63,7 @@
     "@type": "LocalBusiness",
     "name": "Психолог Анна Лёвина",
     "alternateName": "Анна Лёвина психолог",
-    "description": "Клинический психолог Анна Лёвина предоставляет онлайн консультации по всему миру и офлайн в Алматы. Работа с тревогой, депрессией, кризисами, расстановки, игра Лила, экзистенциальная терапия.",
+    "description": "Психолог Анна Лёвина предоставляет онлайн консультации по всему миру и офлайн в Алматы. Работа с тревогой, депрессией, кризисами, расстановки, игра Лила, экзистенциальная терапия.",
     "url": "https://lavjourney.kz",
     "address": {
       "@type": "PostalAddress",
@@ -149,8 +149,8 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Анна Лёвина",
-    "jobTitle": "Клинический психолог",
-    "description": "Клинический психолог. Специализируется на экзистенциальной терапии, НЛП, психодинамическом подходе, символдраме. Работает с кризисами среднего возраста, тревогой, депрессией.",
+    "jobTitle": "Психолог",
+    "description": "Психолог. Специализируется на экзистенциальной терапии, НЛП, психодинамическом подходе, символдраме. Работает с кризисами среднего возраста, тревогой, депрессией.",
     "image": "https://lavjourney.kz/anya-main.jpg",
     "url": "https://lavjourney.kz",
     "address": {
@@ -171,7 +171,7 @@
       }
     ],
     "knowsAbout": [
-      "Клиническая психология",
+      "Психология",
       "Экзистенциальная терапия",
       "НЛП",
       "Психодинамический подход",
@@ -200,7 +200,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Психолог Анна Лёвина — онлайн и оффлайн в Алматы.",
-    "description": "Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия",
+    "description": "Психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия",
     "url": "https://lavjourney.kz",
     "inLanguage": "ru",
     "isPartOf": {
@@ -216,7 +216,7 @@
     "mainEntity": {
       "@type": "Person",
       "name": "Анна Лёвина",
-      "jobTitle": "Клинический психолог"
+      "jobTitle": "Психолог"
     }
   }
   </script>
@@ -230,7 +230,7 @@
     "provider": {
       "@type": "Person",
       "name": "Анна Лёвина",
-      "jobTitle": "Клинический психолог"
+      "jobTitle": "Психолог"
     },
     "areaServed": [
       {
@@ -392,7 +392,7 @@
       </div>
       
       <div class="hero-image-wrapper" >
-        <img src="anya-main.jpg" alt="#психолог алматы #психолог онлайн #женщина психолог #клинический психолог #кризис среднего возраста #лила #расстановки #психологическая помощь #кто я #зачем я живу #в чем смысл жизни #тревога #усталость #тупик #конфликт #проблемы #отношения #что-то не так #выгорание #не люблю себя #не выбираю себя">
+        <img src="anya-main.jpg" alt="#психолог алматы #психолог онлайн #женщина психолог #кризис среднего возраста #лила #расстановки #психологическая помощь #кто я #зачем я живу #в чем смысл жизни #тревога #усталость #тупик #конфликт #проблемы #отношения #что-то не так #выгорание #не люблю себя #не выбираю себя">
       </div>
     </div>
     
@@ -739,7 +739,7 @@
   <div class="footer-columns">
     <div class="footer-col footer-left">
       <div edicontent_id="anna-leovina">Анна Лёвина</div>
-      <div edicontent_id="klinicheskiy-psikholog">клинический психолог</div>
+      <div edicontent_id="klinicheskiy-psikholog">психолог</div>
       <div edicontent_id="onlayn-i-oflayn">онлайн и офлайн</div>
       <div edicontent_id="almaty-kazakhstan">г. Алматы, Казахстан</div>
     </div>
@@ -747,10 +747,10 @@
       <img src="logo.png" alt="Психолог Анна Лёвина" style="object-fit: contain; display: block;">
     </div>
     <div class="footer-col footer-right">
-      <a href="#about" edicontent_id="obo-mne">Обо мне</a><br>
-      <a href="#what_i_work_with" edicontent_id="s-chem-ya-rabotayu">С чем я работаю</a><br>
-      <a href="#how_i_work" edicontent_id="moy-podhod">Мой подход</a><br>
-      <a href="#services" edicontent_id="uslugi-i-tseny">Услуги и цены</a><br>
+      <div><a href="#about" edicontent_id="obo-mne">Обо мне</a></div>
+      <div><a href="#what_i_work_with" edicontent_id="s-chem-ya-rabotayu">С чем я работаю</a></div>
+      <div><a href="#how_i_work" edicontent_id="moy-podhod">Мой подход</a></div>
+      <div><a href="#services" edicontent_id="uslugi-i-tseny">Услуги и цены</a></div>
     </div>
   </div>
 </footer>
