--- a/articles.html
+++ b/articles.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Статьи психолога Анны Лёвиной | Экзистенциальная терапия и личностный рост</title>
-  <meta name="description" content="📚 Профессиональные статьи клинического психолога Анны Лёвиной: экзистенциальная терапия, кризис среднего возраста, личностный рост. Научно обоснованные методы и практические советы из 15+ лет опыта. Алматы, Казахстан">
-  <meta name="keywords" content="статьи психолога Алматы, экзистенциальная терапия, кризис среднего возраста, психолог Анна Лёвина, личностный рост, смысл жизни, психотерапия Казахстан, клинический психолог статьи, депрессия помощь, тревожность лечение, онлайн психолог">
+  <title>Статьи психолога Анны Лёвиной | Кризис среднего возраста и личностный рост</title>
+  <meta name="description" content="📚 Профессиональные статьи психолога Анны Лёвиной: кризис среднего возраста, поиск смысла жизни, личностный рост. Практические методы и советы из многолетнего опыта. Прием в Алматы и онлайн по всему миру">
+  <meta name="keywords" content="статьи психолога Алматы, кризис среднего возраста, психолог Анна Лёвина, личностный рост, смысл жизни, психотерапия Казахстан, онлайн психолог, кризис 40 лет, экзистенциальный кризис, поиск себя">
   <meta property="og:title" content="Статьи психолога Анны Лёвиной">
-  <meta property="og:description" content="📖 Научно обоснованные статьи клинического психолога с 15+ летним опытом. Экзистенциальная терапия, личностный рост, преодоление кризисов. Практические методы и реальные кейсы из терапевтической практики в Алматы.">
+  <meta property="og:description" content="📖 Статьи психолога с многолетним опытом. Специализация - кризис среднего возраста, поиск смысла жизни, личностный рост. Практические методы из терапевтической практики. Прием в Алматы и онлайн.">
   <meta property="og:image" content="https://lavjourney.kz/anya-main.jpg">
   <meta property="og:image:alt" content="Статьи психолога Анны Лёвиной">
   <meta property="og:url" content="https://lavjourney.kz/articles.html">
@@ -61,7 +61,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Статьи психолога Анны Лёвиной",
-    "description": "Профессиональные статьи клинического психолога Анны Лёвиной о экзистенциальной терапии, личностном росте и психологической работе",
+    "description": "Профессиональные статьи психолога Анны Лёвиной о кризисе среднего возраста, личностном росте и поиске смысла жизни",
     "url": "https://lavjourney.kz/articles.html",
     "inLanguage": "ru",
     "isPartOf": {
@@ -72,12 +72,12 @@
     "about": {
       "@type": "Thing",
       "name": "Психологические статьи",
-      "description": "Статьи о психотерапии, экзистенциальной терапии и личностном росте"
+      "description": "Статьи о кризисе среднего возраста, личностном росте и поиске смысла жизни"
     },
     "author": {
       "@type": "Person",
       "name": "Анна Лёвина",
-      "jobTitle": "Клинический психолог",
+      "jobTitle": "Психолог",
       "url": "https://lavjourney.kz"
     },
     "publisher": {
@@ -101,13 +101,13 @@
           "author": {
             "@type": "Person",
             "name": "Анна Лёвина",
-            "jobTitle": "Клинический психолог",
+            "jobTitle": "Психолог",
             "url": "https://lavjourney.kz"
           },
-          "description": "Практическое руководство по преодолению экзистенциального кризиса: признаки, причины, методы работы. Профессиональные инсайты из 15+ лет терапевтической практики.",
+          "description": "Практическое руководство по преодолению экзистенциального кризиса: признаки, причины, методы работы. Профессиональные инсайты из многолетней терапевтической практики.",
           "wordCount": "1500",
           "timeRequired": "PT8M",
-          "keywords": ["экзистенциальный кризис", "кризис среднего возраста", "смысл жизни", "психотерапия"]
+          "keywords": ["экзистенциальный кризис", "кризис среднего возраста", "смысл жизни", "психолог Алматы"]
         },
         {
           "@type": "Article",
@@ -118,12 +118,12 @@
           "author": {
             "@type": "Person",
             "name": "Анна Лёвина",
-            "jobTitle": "Клинический психолог"
+            "jobTitle": "Психолог"
           },
-          "description": "Эффективные стратегии работы с тревожностью: когнитивно-поведенческая терапия, техники дыхания, mindfulness. Пошаговый план самопомощи.",
+          "description": "Эффективные стратегии работы с тревожностью: практические техники, методы самопомощи, дыхательные практики. Пошаговый план работы с тревогой.",
           "wordCount": "1200",
           "timeRequired": "PT6M",
-          "keywords": ["тревожность", "панические атаки", "стресс", "КПТ"]
+          "keywords": ["тревожность", "панические атаки", "стресс", "психолог онлайн"]
         },
         {
           "@type": "Article",
@@ -134,12 +134,12 @@
           "author": {
             "@type": "Person",
             "name": "Анна Лёвина",
-            "jobTitle": "Клинический психолог"
+            "jobTitle": "Психолог"
           },
-          "description": "Как распознать депрессию, отличить от хандры и найти путь к выздоровлению. Мифы о депрессии, современные методы лечения и роль психотерапии.",
+          "description": "Как распознать депрессию, отличить от хандры и найти путь к выздоровлению. Мифы о депрессии, современные методы помощи и роль психотерапии.",
           "wordCount": "1400",
           "timeRequired": "PT7M",
-          "keywords": ["депрессия", "апатия", "лечение депрессии", "антидепрессанты"]
+          "keywords": ["депрессия", "апатия", "помощь при депрессии", "психолог Алматы"]
         }
       ]
     }
@@ -179,7 +179,7 @@
         "name": "Как часто публикуются новые статьи?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Новые статьи публикуются 1-2 раза в месяц. Каждая статья основана на реальном опыте работы с клиентами и содержит практические рекомендации для самостоятельной работы."
+          "text": "Новые статьи публикуются регулярно. Каждая статья основана на практическом опыте работы с клиентами и содержит полезные рекомендации для самостоятельной работы."
         }
       },
       {
@@ -195,7 +195,7 @@
         "name": "Основаны ли статьи на научных исследованиях?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Да, все материалы основаны на принципах доказательной психологии и психотерапии. Используются подходы когнитивно-поведенческой, экзистенциальной терапии и современные исследования в области ментального здоровья."
+          "text": "Да, все материалы основаны на практическом опыте и современных подходах в психологии и психотерапии. Особое внимание уделяется работе с кризисом среднего возраста и поиском смысла жизни."
         }
       },
       {
@@ -950,7 +950,7 @@
       <div class="author-credentials">
         <div class="author-info">
           <div class="author-text">
-            <p><strong>Анна Лёвина</strong> — клинический психолог, эксперт в области экзистенциальной и когнитивно-поведенческой терапии. Специализируется на работе с кризисными состояниями, тревожными и депрессивными расстройствами. Ведет практику в Алматы и онлайн.</p>
+            <p><strong>Анна Лёвина</strong> — психолог. Основное направление работы - кризис среднего возраста. Ведет практику в г. Алматы и онлайн по миру.</p>
 
           </div>
         </div>
@@ -999,7 +999,7 @@
     <div class="footer-columns">
       <div class="footer-col footer-left">
         <div>Анна Лёвина</div>
-        <div>клинический психолог</div>
+        <div>психолог</div>
         <div>онлайн и офлайн</div>
         <div>г. Алматы, Казахстан</div>
       </div>
